modify influx env var

--- a/influxDB_deployment/influxdb-deployment.yaml
+++ b/influxDB_deployment/influxdb-deployment.yaml
@@ -26,19 +26,19 @@ spec:
         - containerPort: 8086
           name: influxdb-port # Name for the port
         volumeMounts:
-        - name: synnfs # Must match the volume name defined below
+        - name: influx-data # Must match the volume name defined below
           # Mount path inside the container as requested
           mountPath: /app/data
         # --- IMPORTANT: Configure InfluxDB to USE the mount path ---
         # You likely need environment variables or a config file to tell
         # InfluxDB where to store data. Add them here. Example for v2:
-        # env:
+        env:
         # - name: INFLUXD_BOLT_PATH
         #   value: "/mnt/cephfs/influxd.bolt"
         # - name: INFLUXD_ENGINE_PATH
         #   value: "/mnt/cephfs/engine"
-        # - name: INFLUXD_CONFIG_PATH # If using a config file mounted elsewhere
-        #   value: "/etc/influxdb2/config.yml"
+         - name: INFLUXD_CONFIG_PATH # If using a config file mounted elsewhere
+           value: "/app/data/influxdb2/config.yml"
         # --- Optional but Recommended: Resource Limits ---
         resources:
             requests:
@@ -50,7 +50,7 @@ spec:
 
       volumes:
         # Define the volume that uses the PVC
-      - name: synnfs # Must match volumeMounts.name above
+      - name: influx-data # Must match volumeMounts.name above
         persistentVolumeClaim:
           # Must match the metadata.name of the PVC defined above
           claimName: influxdb-pvc
