--- a/influxDB_deployment/influxdb-deployment.yaml
+++ b/influxDB_deployment/influxdb-deployment.yaml
@@ -33,10 +33,10 @@ spec:
         # You likely need environment variables or a config file to tell
         # InfluxDB where to store data. Add them here. Example for v2:
         env:
-        # - name: INFLUXD_BOLT_PATH
-        #   value: "/mnt/cephfs/influxd.bolt"
-        # - name: INFLUXD_ENGINE_PATH
-        #   value: "/mnt/cephfs/engine"
+         - name: INFLUXD_BOLT_PATH
+           value: "/app/data/influxd.bolt"
+         - name: INFLUXD_ENGINE_PATH
+           value: "/app/data/engine"
          - name: INFLUXD_CONFIG_PATH # If using a config file mounted elsewhere
            value: "/app/data/influxdb2/config.yml"
         # --- Optional but Recommended: Resource Limits ---
