--- a/heimdall_deployment/heimdall-deployment.yaml
+++ b/heimdall_deployment/heimdall-deployment.yaml
@@ -27,9 +27,9 @@ spec:
           name: heimdall-port # Optional name for the port
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
-        - name: synnfs # Must match the volume name defined below in spec.volumes
+        - name: heimdall-data # Must match the volume name defined below in spec.volumes
           # mountPath: The directory path inside the container where the storage will be accessible.
-          mountPath: /app/data # e.g., /app/data or /var/www/html
+          mountPath: /config # e.g., /app/data or /var/www/html
         # --- Optional but Recommended ---
         resources:
             requests:
@@ -47,7 +47,7 @@ spec:
       # volumes: Defines the volumes available to the Pod.
       volumes:
       # - name: Must match the name used in volumeMounts above.
-      - name: synnfs # e.g., app-data
+      - name: heimdall-data # e.g., app-data
         # persistentVolumeClaim: Links this volume definition to the PVC created earlier.
         persistentVolumeClaim:
           # claimName: Must match the metadata.name of the PVC defined above.
