--- a/influxDB_deployment/influxdb-deployment.yaml
+++ b/influxDB_deployment/influxdb-deployment.yaml
@@ -37,8 +37,8 @@ spec:
            value: "/app/data/influxd.bolt"
          - name: INFLUXD_ENGINE_PATH
            value: "/app/data/engine"
-         - name: INFLUXD_CONFIG_PATH # If using a config file mounted elsewhere
-           value: "/app/data/influxdb2/config.yml"
+         #- name: INFLUXD_CONFIG_PATH # If using a config file mounted elsewhere
+         #  value: "/app/data/influxdb2/config.yml"
         # --- Optional but Recommended: Resource Limits ---
         resources:
             requests:
