--- a/postgreSQL_deployment/postgre-pv-nfs.yaml
+++ b/postgreSQL_deployment/postgre-pv-nfs.yaml
@@ -17,4 +17,4 @@ spec:
   nfs:
     server: 10.0.150.10 # Replace with the actual IP or hostname of your NFS server / ex. 10.0.150.10
     #Path defined here HAS to exist in the directory. Will NOT create a directory for the app.
-    path: /volume1/postgre # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
+    path: /volume1/microk8s/postgre # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
