--- a/postgreSQL_deployment/postgre-deployment.yaml
+++ b/postgreSQL_deployment/postgre-deployment.yaml
@@ -16,6 +16,10 @@ spec:
       labels:
         app: postgreSQL # Labels applied to the Pod
     spec:
+      securityContext: #Need to add to run container as admin since NFS share is set to Map as admin.
+        runAsUser: 1024           #Running as admin
+        runAsGroup: 1024          #Running as admin
+        #fsGroup: <Group_GID>
       containers:
       - name: postgres
         # Use an official Postgres image. Consider pinning to a specific version (e.g., postgres:15) for stability.
