--- a/homarr_deployment/homarr-deployment.yaml
+++ b/homarr_deployment/homarr-deployment.yaml
@@ -22,6 +22,11 @@ spec:
         ports:
         - containerPort: 7575
           name: homarr-port
+        #Security Context to run container as admin
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 1000
+          fsGroup: 1000
         # --- ADD THESE ENVIRONMENT VARIABLES ---
         env:
         #homarr internal encryption key
