Update Repository with overall general modifications learned from k3s.

--- a/grafana_deployment/grafana-pvc-nfs.yaml
+++ b/grafana_deployment/grafana-pvc-nfs.yaml
@@ -10,9 +10,9 @@ metadata:
   labels:
     app: grafana
 spec:
-  storageClassName: nfs-syn
+  storageClassName: nfs
   accessModes:
-    - ReadWriteMany  #needs to be Many since shared location
+    - ReadWriteMany
   resources:
     requests:
       storage: 10Gi  #Must be equal or less than PV claim
