--- a/jellyfin_deployment/jellyfin-pvc-nfs.yaml
+++ b/jellyfin_deployment/jellyfin-pvc-nfs.yaml
@@ -10,8 +10,9 @@ metadata:
   labels:
     app: jellyfin
 spec:
+  storageClassName: nfs
   accessModes:
-    - ReadWriteMany  #needs to be Many since shared location
+    - ReadWriteMany
   resources:
     requests:
       storage: 20Gi  #Must be equal or less than PV claim
