--- a/postgreSQL_homarr_deployment/postgre-homarr-secrets.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-secrets.yaml
@@ -6,9 +6,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   # A unique name for the Secret
-  name: postgres-secret
+  name: postgres-homarr-secret
+  namespace: homarr
   labels:
-    app: postgreSQL
+    app: postgreHomarr
 type: Opaque # Default type for arbitrary user-defined data
 data:
   # Key names often match expected environment variables
