--- a/grafana_deployment/grafana-pv-nfs.yaml
+++ b/grafana_deployment/grafana-pv-nfs.yaml
@@ -9,13 +9,13 @@ metadata:
   labels:
     app: grafana
 spec:
+  storageClassName: nfs
   capacity:
     storage: 10Gi # Must match or exceed the PVC request
   accessModes:
-    - ReadWriteMany #same as PVC for shared location.
+    - ReadWriteMany 
   persistentVolumeReclaimPolicy: Retain # Or Recycle/Delete, choose what happens to the NFS data when the PV is released
-  storageClassName: nfs-syn
   nfs:
-    server: 10.0.150.10 # Replace with the actual IP or hostname of your NFS server / ex. 10.0.150.10
+    server: 10.0.100.20 # Replace with the actual IP or hostname of your NFS server / ex. 10.0.150.10
     #Path defined here HAS to exist in the directory. Will NOT create a directory for the app.
-    path: /volume1/microk8s # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
+    path: /mnt/storage_pool/k3s/grafana # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
