--- a/homarr_deployment/homarr-pvc-nfs.yaml
+++ b/homarr_deployment/homarr-pvc-nfs.yaml
@@ -7,14 +7,16 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: homarr-pvc  #pvc claim name
+  namespace: homarr
   labels:
     app: homarr
 spec:
+  storageClassName: nfs
   accessModes:
     - ReadWriteMany  #needs to be Many since shared location
   resources:
     requests:
-      storage: 5Gi  #Must be equal or less than PV claim
+      storage: 10Gi  #Must be equal or less than PV claim
   selector:
     matchLabels:
       app: homarr # This label should match the labels of your PV
