--- a/nginx_deployment/nginx-pv-nfs.yaml
+++ b/nginx_deployment/nginx-pv-nfs.yaml
@@ -9,11 +9,12 @@ metadata:
   labels:
     app: nginx
 spec:
+  storageClassName: nfs
   capacity:
     storage: 5Gi # Must match or exceed the PVC request
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain # Or Recycle/Delete, choose what happens to the NFS data when the PV is released
   nfs:
-    server: 10.0.150.10 # Replace with the actual IP or hostname of your NFS server
-    path: /volume1/microk8s/nginx # Replace with the actual export path on your NFS server
+    server: 10.0.100.20 # Replace with the actual IP or hostname of your NFS server
+    path: /mnt/storage_pool/k3s/nginx # Replace with the actual export path on your NFS server
