--- a/nginx_deployment/nginx-pvc-nfs.yaml
+++ b/nginx_deployment/nginx-pvc-nfs.yaml
@@ -10,6 +10,7 @@ metadata:
   labels:
     app: nginx
 spec:
+  storageClassName: nfs
   accessModes:
     - ReadWriteMany  #needs to be Many since shared location
   resources:
