--- a/postgreSQL_homarr_deployment/postgre-homarr-clusterIP.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-clusterIP.yaml
@@ -5,15 +5,16 @@ apiVersion: v1
 kind: Service
 metadata:
   # name: A unique name for the ClusterIP service.
-  name: postgre-clusterip-svc
+  name: postgre-homarr-clusterip-svc
+  namespace: homarr
   labels:
-    app: postgreSQL
+    app: postgreHomarr
 spec:
   # type: ClusterIP is the default, but explicitly stating it is clearer.
   type: ClusterIP
   # selector: Selects the Pods to send traffic to. Must match the labels on the Pods (spec.template.metadata.labels).
   selector:
-    app: postgreSQL
+    app: postgreHomarr
   ports:
     # - protocol: Usually TCP.
   - protocol: TCP
