--- a/postgreSQL_homarr_deployment/postgre-homarr-pv-nfs.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-pv-nfs.yaml
@@ -5,16 +5,18 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgre-pv # A unique name for your PV
+  name: postgre-homarr-pv # A unique name for your PV
+  namespace: homarr
   labels:
-    app: postgreSQL
+    app: postgreHomarr
 spec:
+  storageClassName: nfs
   capacity:
     storage: 10Gi # Must be equal to or greater than the pvc claim
   accessModes:
-    - ReadWriteMany #same as PVC for shared location.
+    - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain # Or Recycle/Delete, choose what happens to the NFS data when the PV is released
   nfs:
-    server: 10.0.150.10 # Replace with the actual IP or hostname of your NFS server / ex. 10.0.150.10
+    server: 10.0.100.20 # Replace with the actual IP or hostname of your NFS server / ex. 10.0.150.10
     #Path defined here HAS to exist in the directory. Will NOT create a directory for the app.
-    path: /volume1/microk8s/postgre # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
+    path: /mnt/storage_pool/k3s/postgreHomarr # Replace with the actual export path on your NFS server / ex. /volume1/microk8s/nginx
