fix app label case for postgres homarr

--- a/postgreSQL_homarr_deployment/postgre-homarr-clusterIP.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-clusterIP.yaml
@@ -8,7 +8,7 @@ metadata:
   name: postgre-homarr-clusterip-svc
   namespace: homarr
   labels:
-    app: postgreHomarr
+    app: postgrehomarr
 spec:
   # type: ClusterIP is the default, but explicitly stating it is clearer.
   type: ClusterIP
