--- a/postgreSQL_homarr_deployment/postgre-homarr-pvc-nfs.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-pvc-nfs.yaml
@@ -9,7 +9,7 @@ metadata:
   name: postgre-homarr-pvc  #pvc claim name
   namespace: homarr
   labels:
-    app: postgreHomarr
+    app: postgrehomarr
 spec:
   storageClassName: nfs
   accessModes:
