--- a/postgreSQL_homarr_deployment/postgre-homarr-secrets.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-secrets.yaml
@@ -9,7 +9,7 @@ metadata:
   name: postgres-homarr-secret
   namespace: homarr
   labels:
-    app: postgreHomarr
+    app: postgrehomarr
 type: Opaque # Default type for arbitrary user-defined data
 data:
   # Key names often match expected environment variables
