--- a/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
@@ -6,23 +6,23 @@ metadata:
   name: postgres-homarr-deployment
   namespace: homarr
   labels:
-    app: postgreHomarr # Label for selection by the Service
+    app: postgrehomarr # Label for selection by the Service
 spec:
   replicas: 1 # Databases usually run as a single replica unless you configure replication
   selector:
     matchLabels:
-      app: postgreHomarr # Must match the labels on the Pod template
+      app: postgrehomarr # Must match the labels on the Pod template
   template:
     metadata:
       labels:
-        app: postgreHomarr # Labels applied to the Pod
+        app: postgrehomarr # Labels applied to the Pod
     spec:
       securityContext: #Need to add to run container as admin since NFS share is set to Map as admin.
         runAsUser: 1024           #Running as admin
         runAsGroup: 1024          #Running as admin
         #fsGroup: <Group_GID>
       containers:
-      - name: postgres-Homarr
+      - name: postgres-homarr
         # Use an official Postgres image. Consider pinning to a specific version (e.g., postgres:15) for stability.
         image: postgres:latest
         ports:
