fix port label for postgres homarr.

--- a/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         image: postgres:latest
         ports:
         - containerPort: 5432 # Standard PostgreSQL port
-          name: postgres-homarr-port
+          name: postgres-h-port
         # Environment variables sourced from the Secret
         env:
         - name: POSTGRES_DB
