--- a/postgreSQL_homarr_deployment/postgre-homarr-clusterIP.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-clusterIP.yaml
@@ -6,7 +6,7 @@ kind: Service
 metadata:
   # name: A unique name for the ClusterIP service.
   name: postgre-homarr-clusterip-svc
-  namespace: homarr
+  #namespace: homarr
   labels:
     app: postgrehomarr
 spec:
