--- a/postgreSQL_homarr_deployment/postgre-homarr-pv-nfs.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-pv-nfs.yaml
@@ -6,11 +6,11 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: postgre-homarr-pv # A unique name for your PV
-  namespace: homarr
+  #namespace: homarr
   labels:
     app: postgrehomarr
 spec:
-  #storageClassName: nfs
+  storageClassName: nfs
   capacity:
     storage: 10Gi # Must be equal to or greater than the pvc claim
   accessModes:
