--- a/postgreSQL_homarr_deployment/postgre-homarr-pvc-nfs.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-pvc-nfs.yaml
@@ -7,11 +7,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgre-homarr-pvc  #pvc claim name
-  namespace: homarr
+  #namespace: homarr
   labels:
     app: postgrehomarr
 spec:
-  #storageClassName: nfs
+  storageClassName: nfs
   accessModes:
     - ReadWriteMany
   resources:
