--- a/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       securityContext: #Need to add to run container as admin since NFS share is set to Map as admin.
         runAsUser: 1024           #Running as admin
         runAsGroup: 1024          #Running as admin
-        #fsGroup: <Group_GID>
+        #fsGroup: 999
       containers:
       - name: postgres-homarr
         # Use an official Postgres image. Consider pinning to a specific version (e.g., postgres:15) for stability.
@@ -50,6 +50,11 @@ spec:
         - name: postgres-homarr-data # Must match the volume name defined below
           # Default data directory for the postgres image
           mountPath: /var/lib/postgresql/data
+        #security context for container:
+        securityContext:
+          runAsUser: 999 #so container can modify storage as it needs.
+          runAsGroup: 999
+          allowPrivilegeEscalation: false
         # --- Optional but Recommended ---
         resources:
           requests:
