--- a/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
@@ -18,9 +18,9 @@ spec:
         app: postgrehomarr # Labels applied to the Pod
     spec:
       securityContext: #Need to add to run container as admin since NFS share is set to Map as admin.
-        runAsUser: 999           #Running as admin
-        runAsGroup: 999          #Running as admin
-        fsGroup: 999
+        runAsUser: 0           #Running as admin
+        runAsGroup: 0         #Running as admin
+        #fsGroup: 1024
       containers:
       - name: postgres-homarr
         # Use an official Postgres image. Consider pinning to a specific version (e.g., postgres:15) for stability.
@@ -52,8 +52,8 @@ spec:
           mountPath: /var/lib/postgresql/data
         #security context for container:
         securityContext:
-          runAsUser: 999 #so container can modify storage as it needs.
-          runAsGroup: 999
+          runAsUser: 0 #so container can modify storage as it needs.
+          runAsGroup: 0
           allowPrivilegeEscalation: false
         # --- Optional but Recommended ---
         resources:
