homarr comment out namespace for now. test

--- a/homarr_deployment/homarr-deployment.yaml
+++ b/homarr_deployment/homarr-deployment.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: homarr-deployment
-  namespace: homarr
+  #namespace: homarr
   labels:
     app: homarr
 spec:
