--- a/homarr_deployment/homarr-pv-nfs.yaml
+++ b/homarr_deployment/homarr-pv-nfs.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: homarr-pv # A unique name for your PV
-  namespace: homarr
+  #namespace: homarr
   labels:
     app: homarr
 spec:
