--- a/homarr_deployment/homarr-pvc-nfs.yaml
+++ b/homarr_deployment/homarr-pvc-nfs.yaml
@@ -7,7 +7,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: homarr-pvc  #pvc claim name
-  namespace: homarr
+  #namespace: homarr
   labels:
     app: homarr
 spec:
