--- a/jellyfin_deployment/jellyfin-externalIP.yaml
+++ b/jellyfin_deployment/jellyfin-externalIP.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: heimdall-external
+  name: jellyfin-external
 spec:
   selector:
-    app: heimdall
+    app: jellyfin
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 8096
+      targetPort: 8096
   type: LoadBalancer #specify loadBalancer type service.  After metalLB is configured on the cluster.  
-  loadBalancerIP: 10.0.100.30 #target IP for the service.
+  loadBalancerIP: 10.0.100.21 #target IP for the service.
