--- a/jellyfin_deployment/jellyfin-externalIP.yaml
+++ b/jellyfin_deployment/jellyfin-externalIP.yaml
@@ -1,13 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jellyfin-external
+  name: jellyfin-service
+  #namespace: default # Or your namespace
 spec:
   selector:
-    app: jellyfin
+    app: jellyfin # This label should match your Jellyfin Deployment's pod labels
   ports:
     - protocol: TCP
-      port: 8096
-      targetPort: 8096
-  type: LoadBalancer #specify loadBalancer type service.  After metalLB is configured on the cluster.  
+      port: 80       # External port for the Service (what you connect to)
+      targetPort: 8096 # Internal port of the Jellyfin container
+      name: http
+    - protocol: TCP
+      port: 443      # External HTTPS port (if you set up HTTPS)
+      targetPort: 8920 # Internal HTTPS port of Jellyfin
+      name: https
+  type: LoadBalancer 
   loadBalancerIP: 10.0.100.21 #target IP for the service.
+#test to see if can direct to container deployment without specifing the port.
