--- a/jellyfin_deployment/jellyfin-externalIP.yaml
+++ b/jellyfin_deployment/jellyfin-externalIP.yaml
@@ -5,15 +5,15 @@ metadata:
   #namespace: default # Or your namespace
 spec:
   selector:
-    app: jellyfin # This label should match your Jellyfin Deployment's pod labels
+    app: jellyfin # This label should match your Deployment's pod labels
   ports:
     - protocol: TCP
       port: 80       # External port for the Service (what you connect to)
-      targetPort: 8096 # Internal port of the Jellyfin container
+      targetPort: 8096 # Internal port of the container deployment
       name: http
     - protocol: TCP
       port: 443      # External HTTPS port (if you set up HTTPS)
-      targetPort: 8920 # Internal HTTPS port of Jellyfin
+      targetPort: 8920 # Internal HTTPS port; if applicable. 
       name: https
   type: LoadBalancer 
   loadBalancerIP: 10.0.100.21 #target IP for the service.
