--- a/influxDB_deployment/influxdb-deployment.yaml
+++ b/influxDB_deployment/influxdb-deployment.yaml
@@ -24,11 +24,11 @@ spec:
       containers:
       - name: influxdb # Name for the container
         # Use a specific version tag is recommended over latest
-        image: influxdb:2.7.5 # Example: InfluxDB v2.7.5 image
+        image: influxdb:2.7.5 # Example: container:version
         ports:
           # Default InfluxDB v2 API port
         - containerPort: 8086
-          name: influxdb-port # Name for the port
+          name: influxdb-http # Name for the port
         volumeMounts:
         - name: influx-data # Must match the volume name defined below
           # Mount path inside the container as requested
