modify mountPath of pihole deployment.

--- a/pihole_deployment/pihole-deployment.yaml
+++ b/pihole_deployment/pihole-deployment.yaml
@@ -31,7 +31,7 @@ spec:
         volumeMounts:
         - name: pihole-data # Must match the volume name defined below in spec.volumes
           # mountPath : The directory path inside the container where the storage will be accessible.
-          mountPath: './etc-pihole:/etc/pihole' # e.g. /app/data or /var/www/html
+          mountPath: /etc/pihole # e.g. /app/data or /var/www/html
           # Not sure if this mount path will work but its what is defined in the container deployment.
         # --- Optional but Recommended Resources limits ---
         resources: 
