--- a/pihole_deployment/pihole-dns-external.yaml
+++ b/pihole_deployment/pihole-dns-external.yaml
@@ -1,3 +1,7 @@
+# metalLB deployment file
+# States the address the LoadBalancer service type will use to expose app/service.
+# This service has port 53 also defined so DNS traffic can be directed to the pod.
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -22,4 +26,4 @@ spec:
   type: LoadBalancer
   # Optional: To request a specific IP from your MetalLB pool
   loadBalancerIP: "10.0.100.2"
-  externalTrafficPolicy: Local # Force the Service to no do any cross node hopping so the traffic goes to the pods hosting node. Should preserve the original hosts IP.
+  externalTrafficPolicy: Local # Preserves source IP; Forces traffic to local node of pod.
