--- a/ubuntu_kasm_deployment/ubuntu-kasm-pvc-nfs.yaml
+++ b/ubuntu_kasm_deployment/ubuntu-kasm-pvc-nfs.yaml
@@ -6,16 +6,16 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pihole-pvc # PVC Claim name.
-  labels: 
-    app: pihole
+  name: ubuntu-kasm-pvc # PVC claim name.
+  labels:
+    app: ubuntu-kasm
 spec:
   storageClassName: nfs
   accessModes:
-    - ReadWriteMany
+   - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi # Must be equal to or less than the PV claim.
+      storage: 20Gi # Must be euqal to or less than the PV claim.
   selector:
     matchLabels:
-      app: pihole # This label should match the labels of your and APP. 
+      app: ubuntu-kasm # This label should match the labels of your app.
