--- a/pihole_deployment/pihole-deployment.yaml
+++ b/pihole_deployment/pihole-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: pihole
 spec:
-  replicas: 1 # Will keep at 1 as multiple instances can cause issue.
+  replicas: 3 # Will keep at 1 as multiple instances can cause issue.
   selector:
     # Must match the labels on the Pod template below and all other services.
     matchLabels:
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: pihole
-        image: pihole/pihole:2025.07.1 # repot/app:version.
+        image: pihole/pihole:2025.08.1 # repot/app:version. (updated to latest version 8/21/2025)
         ports:
         - containerPort: 443 # The port the application needs to connect to an HTTPS web socket.
           name: pihole-https # Name of the port.
