--- a/pihole_deployment/pihole-deployment.yaml
+++ b/pihole_deployment/pihole-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: pihole
 spec:
-  replicas: 3 # Will keep at 1 as multiple instances can cause issue.
+  replicas: 1 # Will keep at 1 as multiple instances can cause issue. SQLite does not do well with multiple instances writing to it at the same time. 
   selector:
     # Must match the labels on the Pod template below and all other services.
     matchLabels:
