update homarr version.

--- a/homarr_deployment/homarr-deployment.yaml
+++ b/homarr_deployment/homarr-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: homarr
-        image: ghcr.io/homarr-labs/homarr:latest
+        image: ghcr.io/homarr-labs/homarr:1.34.0 #(updated 8/27/25)
         ports:
         - containerPort: 7575
           name: homarr-http
