--- a/homarr_deployment/homarr-deployment.yaml
+++ b/homarr_deployment/homarr-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: homarr
-        image: ghcr.io/homarr-labs/homarr:1.34.0 #(updated 8/27/25)
+        image: ghcr.io/homarr-labs/homarr:v1.34.0 #(updated 8/28/25)
         ports:
         - containerPort: 7575
           name: homarr-http
