add worker nodes tag.

--- a/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
@@ -27,6 +27,9 @@ spec:
           name: pihole-https # Name of the port.
         - containerPort: 53 # Port for the DNS traffic
           name: pihole-dns #Name of the port.
+      # selector so the Pod will only run on worker nodes with multiple vlans.
+      nodeSelector:
+        node.kubernetes.io/microk8s-worker: microk8s-worker
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
         - name: pihole-data # Must match the volume name defined below in spec.volumes
