--- a/jellyfin_deployment/jellyfin-deployment.yaml
+++ b/jellyfin_deployment/jellyfin-deployment.yaml
@@ -27,6 +27,9 @@ spec:
           name: jellyfin-http # http port for jellyfin container.
         - containerPort: 8920
           name: jellyfin-https # https port for jellyfin container.
+      # Selector so pod will only run on workers.
+      nodeSelector:
+        node.kubernetes.io/microk8s-worker: microk8s-worker
         # volumeMounts: Mounts the volume requested by the PVC into the container.
         volumeMounts:
         - name: jellyfin-data # Must match the volume name defined below in spec.volumes
