--- a/pihole_mgmt_deployment/pihole-mgmt-clusterIP.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-clusterIP.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Service
 metadata:
   # name of the service unique to the cluster:
-  name: pihole-clusterip-svc
+  name: pihole-mgmt-clusterip-svc
   labels:
     app: pihole-mgmt
 spec:
